cmake_minimum_required(VERSION 2.8)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
include(cotire)

set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")

# Global configuration settings
set(CMAKE_CXX_STANDARD 14)

# Ensure version constants are being passed to cmake, otherwise initialize defaults
IF(NOT DEFINED VERSION_MAJOR)
	set(VERSION_MAJOR 4)
ENDIF(NOT DEFINED VERSION_MAJOR)

IF(NOT DEFINED VERSION_MINOR)
	set(VERSION_MINOR 2)
ENDIF(NOT DEFINED VERSION_MINOR)

IF(NOT DEFINED VERSION_PATCH)
	set(VERSION_PATCH 0)
ENDIF(NOT DEFINED VERSION_PATCH)

IF(NOT DEFINED VERSION_BRANCH)
	set(VERSION_BRANCH 2)
ENDIF(NOT DEFINED VERSION_BRANCH)

# Projects
add_subdirectory(so)
#add_subdirectory(so2)
add_subdirectory(bin)
